tests/cases/errors/runtime_call_string.lox
// Strings are not callable.
// expect runtime error: Can only call functions and classes.
"hi"();
